<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        layout="@layout/layout_topbar_base"
        android:id="@+id/tripcourse_topbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/signup_done_iv"
        android:layout_width="218dp"
        android:layout_height="218dp"
        android:layout_marginTop="214dp"
        android:src="@drawable/img_user_signup_handshake"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/signup_done_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/user_signup_done_title"
        android:fontFamily="@font/notosans_kr_bold"
        android:includeFontPadding="false"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/signup_done_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/signup_done_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/user_signup_done_content"
        android:fontFamily="@font/notosans_kr_bold"
        android:includeFontPadding="false"
        android:textSize="14sp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/signup_done_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/signup_done_write_btn"
        android:layout_width="264dp"
        android:layout_height="43dp"
        android:layout_marginTop="85dp"
        android:background="@drawable/bg_signup_greenbtn_radius_5"
        android:text="@string/user_signup_done_write_btn"
        android:fontFamily="@font/notosans_kr_bold"
        android:includeFontPadding="false"
        android:textSize="14sp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/signup_done_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>