<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--상단 바-->
    <include
        layout="@layout/layout_topbar_base"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tripcourse_select_country_topbar_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!--설명 창-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tripcourse_select_country_topbar_layout"
        >

        <LinearLayout
            android:layout_width="292dp"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:paddingHorizontal="25dp"
            android:gravity="center"
            android:background="@drawable/drawable_custom_background_white"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/tripcourse_select_country_explain1"
                android:textSize="10sp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:fontFamily="@font/notosans_kr_regular"
                android:includeFontPadding="false"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/tripcourse_select_country_explain2"
                android:textSize="10sp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:fontFamily="@font/notosans_kr_regular"
                android:includeFontPadding="false"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--선택 완료 버튼-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <Button
            android:layout_width="228dp"
            android:layout_height="43dp"
            android:background="@drawable/drawable_custom_button_base"
            android:gravity="center"
            android:text="@string/tripcourse_select_complete"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:fontFamily="@font/notosans_kr_bold"
            android:padding="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>