<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--상단 바-->
    <include
        layout="@layout/layout_topbar_base"
        android:id="@+id/tripcourse_delete_topbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tripcourse_delete_topbar_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <ImageView
                    android:id="@+id/tripcourse_delete_main_img"
                    android:src="@drawable/img_delete_trashcan_closed"
                    android:layout_width="182dp"
                    android:layout_height="182dp"
                    android:layout_marginBottom="40dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tripcourse_delete_title"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/notosans_kr_bold"
                    android:includeFontPadding="false"
                    android:gravity="center"
                    android:padding="10dp"/>

                <TextView
                    android:id="@+id/tripcourse_delete_information_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tripcourse_delete_information"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/notosans_kr_regular"
                    android:includeFontPadding="false"
                    android:gravity="center"
                    android:padding="10dp"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--홈 화면 돌아가기 바-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tripcourse_select_country_select_complete_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <!--선택 완료 버튼-->
            <Button
                android:id="@+id/tripcourse_delete_home_btn"
                android:layout_width="264dp"
                android:layout_height="43dp"
                android:background="@drawable/bg_base_main_1_fill"
                android:gravity="center"
                android:text="@string/tripcourse_delete_home"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:fontFamily="@font/notosans_kr_bold"
                android:includeFontPadding="false"
                android:padding="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>